--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,17 +5,33 @@ publish_to: 'none'
 version: 0.1.1+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: ^3.6.2
 
 dependencies:
   cupertino_icons: ^1.0.8
+  fl_chart: ^1.0.0
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
+  freezed: ^3.0.6
+  freezed_annotation: ^3.0.0
+  get_it: ^8.0.3
+  go_router: ^15.1.2
+  json_annotation: ^4.9.0
+  riverpod_annotation: ^2.6.1
+  supabase_flutter: ^2.9.0
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  custom_lint:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.9.5
+  riverpod_generator: ^2.6.5
+  riverpod_lint: ^2.6.5
 
 flutter:
+  assets:
+    - assets/
   uses-material-design: true
