--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.6.1
   supabase_flutter: ^2.9.0
+  tflite_web: ^0.3.0
 
 dev_dependencies:
   build_runner: ^2.4.15
